--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1> Time, Space, Complexity</h1>
+		<p>
+			Time complexity is a measure used in computer science to evaluate the efficiency of an algorithm in terms of the amount of time it takes to run as a function of the input size. It provides an estimation of how the runtime of an algorithm grows relative to the size of the input, helping developers understand and predict the algorithm's behavior for large inputs.
+			It is used to make program more efficent. 
+		</p>
+		<p><b>Space complexity</b> refers to the amount of memory an algorithm uses relative to the size of its input. It measures both the fixed memory required (e.g., for variables, constants, and program instructions) and the additional memory needed for dynamic operations such as recursion or data structures.
+		It is also expressed using Big O notation (eg O(n)).
+		</p>
+	
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
