--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<h1> Time, Space, Complexity</h1>
+		<h1> Time and Space Complexity</h1>
 		<p>
 			Time complexity is a measure used in computer science to evaluate the efficiency of an algorithm in terms of the amount of time it takes to run as a function of the input size. It provides an estimation of how the runtime of an algorithm grows relative to the size of the input, helping developers understand and predict the algorithm's behavior for large inputs.
 			It is used to make program more efficent. 
